overflow problem solved

--- a/Shamim/style.css
+++ b/Shamim/style.css
@@ -46,7 +46,7 @@ background-color:white;
     justify-content: center;
     align-items: center;
     /* position: fixed; */
-    margin-top: 45px;
+    margin-top: 13px;
     box-shadow: 0px 0px 1px  rgb(84, 83, 83), -0px 0px 1px  rgb(84, 83, 83);
     /* cursor: pointer; */
 
@@ -154,8 +154,7 @@ background-color:white;
         justify-content: center;
         align-items: center;
         position: absolute;
-         top: 25px; 
-         margin-left: 50px;
+        top: 25px; 
         box-shadow: 0px 0px 1px  rgb(84, 83, 83), -0px 0px 1px  rgb(84, 83, 83);
     }
     .gender select{
@@ -357,15 +356,16 @@ background-color:white;
 }
 .third{
     height: 250px;
-    width: 400px;
+    width: 300px;
     display: flex;
     justify-content: space-around;
     align-items: center;
     
 }
 .button button{
+    margin-left: -10px;
     height: 50px;
-    width: 150px;
+    width: 120px;
     color: white;
     background-color: rgb(181, 69, 16);
     border: none;
@@ -374,8 +374,13 @@ background-color:white;
     cursor: pointer;
 }
 .icon1 img{
-    height: 30px;
-    width: 30px;
+    height: 20px;
+    width: 20px;
+    border-radius: 505;
+}
+.icon2 img{
+    height: 20px;
+    width: 20px;
     border-radius: 505;
 }
 .icon1 img:hover{
